--- a/BestBooks.Tests/App.config
+++ b/BestBooks.Tests/App.config
@@ -4,6 +4,11 @@
     that apply only to the Test project.
 -->
 <configuration>
+  <connectionStrings>
+    <add name="BestBooksDBConnectionString" 
+     connectionString ="server=localhost; database=BestBooksDB; trusted_connection=type;" 
+     providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
