--- a/BestBooks/BestBooks.csproj
+++ b/BestBooks/BestBooks.csproj
@@ -157,6 +157,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810251102426_InitialMoles.cs" />
+    <Compile Include="Migrations\201810251102426_InitialMoles.Designer.cs">
+      <DependentUpon>201810251102426_InitialMoles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\BestBooksContext.cs" />
     <Compile Include="Models\Book.cs" />
@@ -219,6 +224,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201810251102426_InitialMoles.resx">
+      <DependentUpon>201810251102426_InitialMoles.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
