changed cofig string

--- a/BestBooks.Tests/App.config
+++ b/BestBooks.Tests/App.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="BestBooksDBConnectionString" 
-    connectionString ="server=localhost; database=BestBooksDB; trusted_connection=type;" 
+    connectionString ="server=EN32254\SQLEXPRESS; database=BestBooksDB; trusted_connection=true;" 
      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <configSections>
